--- a/DV_notebook.ipynb
+++ b/DV_notebook.ipynb
@@ -41662,7 +41662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41899,13 +41899,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
       "Dash is running on http://127.0.0.1:8050/\n",
       "\n",
       "Dash is running on http://127.0.0.1:8050/\n",
@@ -41922,17 +41930,17 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:8050/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [06/Apr/2022 16:14:36] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [06/Apr/2022 16:14:37] \"GET /assets/style.css?m=1649174337.852255 HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [06/Apr/2022 16:14:37] \"GET /assets/chocolate2png.png HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [06/Apr/2022 16:14:37] \"GET /_dash-layout HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [06/Apr/2022 16:14:37] \"GET /_dash-dependencies HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [06/Apr/2022 16:14:37] \"GET /_favicon.ico?v=2.2.0 HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [06/Apr/2022 16:14:37] \"GET /_dash-component-suites/dash/dcc/async-graph.js HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [06/Apr/2022 16:14:38] \"GET /_dash-component-suites/dash/dcc/async-plotlyjs.js HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [06/Apr/2022 16:14:38] \"GET /_dash-component-suites/dash/dcc/async-dropdown.js HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [06/Apr/2022 16:14:38] \"GET /_dash-component-suites/dash/dcc/async-slider.js HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [06/Apr/2022 16:14:38] \"POST /_dash-update-component HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [06/Apr/2022 16:27:44] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Apr/2022 16:27:46] \"GET /assets/style.css?m=1649174337.852255 HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [06/Apr/2022 16:27:46] \"GET /assets/chocolate2png.png HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [06/Apr/2022 16:27:46] \"GET /_dash-layout HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Apr/2022 16:27:46] \"GET /_dash-dependencies HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Apr/2022 16:27:46] \"GET /_favicon.ico?v=2.2.0 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Apr/2022 16:27:46] \"GET /_dash-component-suites/dash/dcc/async-graph.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Apr/2022 16:27:46] \"GET /_dash-component-suites/dash/dcc/async-dropdown.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Apr/2022 16:27:46] \"GET /_dash-component-suites/dash/dcc/async-plotlyjs.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Apr/2022 16:27:46] \"GET /_dash-component-suites/dash/dcc/async-slider.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Apr/2022 16:27:47] \"POST /_dash-update-component HTTP/1.1\" 200 -\n"
      ]
     },
     {
@@ -42827,6 +42835,10 @@
            "zerolinewidth": 2
           }
          }
+        },
+        "title": {
+         "text": "Comparison between 5150 and A. Morin",
+         "xanchor": "center"
         }
        }
       }
@@ -42838,9 +42850,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [06/Apr/2022 16:14:40] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [06/Apr/2022 16:14:43] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [06/Apr/2022 16:15:24] \"POST /_dash-update-component HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [06/Apr/2022 16:27:47] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Apr/2022 16:27:47] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Apr/2022 16:28:12] \"POST /_dash-update-component HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -42967,12 +42979,13 @@
     "            ))\n",
     "\n",
     "    fig.update_layout(\n",
-    "    polar=dict(\n",
-    "        radialaxis=dict(\n",
-    "        visible=True,\n",
-    "        range=[0, 5]\n",
-    "        )),\n",
-    "    showlegend=True\n",
+    "        title = {'text': 'Comparison between ' + str(company1) + ' and ' + str(company2)},\n",
+    "        polar=dict(\n",
+    "            radialaxis=dict(\n",
+    "            visible=True,\n",
+    "            range=[0, 5]\n",
+    "            )),\n",
+    "        showlegend=True\n",
     "    )\n",
     "\n",
     "    fig.show()\n",
