--- a/DV_notebook.ipynb
+++ b/DV_notebook.ipynb
@@ -41743,11 +41743,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting gunicorn==20.1.0.\n",
+      "  Using cached gunicorn-20.1.0-py3-none-any.whl (79 kB)\n",
+      "Requirement already satisfied: setuptools>=3.0 in c:\\users\\utilizador\\anaconda3\\envs\\datamining\\lib\\site-packages (from gunicorn==20.1.0.) (58.0.4)\n",
+      "Installing collected packages: gunicorn\n",
+      "Successfully installed gunicorn-20.1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#!pip install gunicorn==20.1.0."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
     "app = dash.Dash(__name__)\n",
+    "server=app.server\n",
     "\n",
     "server = app.server\n",
     "\n",
@@ -55750,7 +55772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
