--- a/DV_notebook.ipynb
+++ b/DV_notebook.ipynb
@@ -3041,7 +3041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3253,7 +3253,7 @@
     "                                                html.Div([\n",
     "                                                        html.Br(),\n",
     "                                                        html.P('Here you can have a simple overview of the main international traders of Cocoa in a year between 1991 to 2019. You can choose to look over Quantity traded or Trade in USD, between Imports or Exports and a specific year.')\n",
-    "                                                ], style={\"text-align\": \"justify\", 'width': '33%','padding-left':'75px'}), \n",
+    "                                                ], style={\"text-align\": \"justify\", 'width': '30%','padding-left':'75px'}), \n",
     "                                                    \n",
     "                                                html.Div([ \n",
     "                                                        html.H4('What variable do you want to analyze?'),\n",
@@ -3264,7 +3264,7 @@
     "                                                                className='radio',\n",
     "                                                                style={'display':'block'}\n",
     "                                                                ),\n",
-    "                                                        ], style={'padding-bottom':'15px','width': '33%','padding-left': '120px'}),\n",
+    "                                                        ], style={'padding-bottom':'15px','width': '25%','padding-left': '120px'}),\n",
     "                                                \n",
     "                                                html.Div([                                                        \n",
     "                                                        html.H4(\"Pick a Flow:\"),\n",
@@ -3276,7 +3276,11 @@
     "                                                                style={'display':'block'}\n",
     "                                                                ) ,\n",
     "                                                        \n",
-    "                                                        ], style={'padding-bottom':'15px','width': '33%','padding-left': '120px'}),\n",
+    "                                                        ], style={'padding-bottom':'15px','width': '25%','padding-left': '120px'}),\n",
+    "\n",
+    "                                                html.Div([\n",
+    "                                                          html.Img(src=app.get_asset_url('tree.png'), style={'position': 'relative', 'width': '70%'})\n",
+    "                                                ], style={'width': '20%'}),\n",
     "\n",
     "                                        ],style={'width': '100%','display': 'flex','justify-content': 'center'}),\n",
     "                                                \n",
@@ -3322,13 +3326,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
       "Dash is running on http://127.0.0.1:8050/\n",
       "\n",
       "Dash is running on http://127.0.0.1:8050/\n",
@@ -3439,20 +3477,20 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:8050/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [08/Apr/2022 21:23:53] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [08/Apr/2022 21:23:54] \"\u001b[37mGET /_dash-layout HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [08/Apr/2022 21:23:54] \"\u001b[37mGET /_favicon.ico?v=2.3.0 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [08/Apr/2022 21:23:54] \"\u001b[37mGET /_dash-dependencies HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [08/Apr/2022 21:23:54] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-graph.js HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [08/Apr/2022 21:23:54] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-dropdown.js HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [08/Apr/2022 21:23:54] \"\u001b[36mGET /_dash-component-suites/dash/dcc/async-plotlyjs.js HTTP/1.1\u001b[0m\" 304 -\n",
-      "127.0.0.1 - - [08/Apr/2022 21:23:54] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-slider.js HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [08/Apr/2022 21:23:55] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-markdown.js HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [08/Apr/2022 21:23:55] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [08/Apr/2022 21:23:56] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-highlight.js HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [08/Apr/2022 21:23:56] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [08/Apr/2022 21:23:56] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [08/Apr/2022 21:23:58] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [08/Apr/2022 22:03:45] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [08/Apr/2022 22:03:46] \"\u001b[37mGET /_dash-layout HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [08/Apr/2022 22:03:46] \"\u001b[37mGET /_dash-dependencies HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [08/Apr/2022 22:03:46] \"\u001b[37mGET /_favicon.ico?v=2.3.0 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [08/Apr/2022 22:03:46] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-graph.js HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [08/Apr/2022 22:03:46] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-plotlyjs.js HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [08/Apr/2022 22:03:46] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-dropdown.js HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [08/Apr/2022 22:03:46] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-slider.js HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [08/Apr/2022 22:03:46] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-markdown.js HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [08/Apr/2022 22:03:47] \"\u001b[37mGET /_dash-component-suites/dash/dcc/async-highlight.js HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [08/Apr/2022 22:03:47] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [08/Apr/2022 22:03:47] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [08/Apr/2022 22:03:48] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [08/Apr/2022 22:03:48] \"\u001b[37mPOST /_dash-update-component HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
